--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "chart.js": "^2.9.4",
     "font-awesome": "^4.7.0",
     "highcharts": "^10.3.3",
+    "izitoast": "^1.4.0",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.5.28",
     "ng2-charts": "^4.1.1",
